grammars/tree-sitter-cobol/grammar.js
    start: $ => choice(
      repeat($.program_definition),
      $.copybook_definition,
      //optional($.function_definition) //todo
    ),

    comment: $ => /\*>[^\n]*/,

    program_definition: $ => prec.right(4, seq(
      $.identification_division,
      repeat($._inter_division_copy_statement),
      optional($.environment_division),
      repeat($._inter_division_copy_statement),
      optional($.data_division),
      optional($.procedure_division), //todo
      repeat($.end_program), //todo
      //optional($.LINE_PREFIX_COMMENT),
    )),

    _inter_division_copy_statement: $ => seq(
      $.copy_statement,
      $._data_period
    ),

    identification_division: $ => seq(
      $._IDENTIFICATION, $._DIVISION, '.',
      optional(choice(
        $._program_id_paragraph,
        $._program_id_paragraph_without_period
      )),
      repeat($._identification_metadata_section)
    ),

    _program_id_paragraph: $ => seq(
      $._PROGRAM_ID, '.',
      $.program_name,
      optional(choice(
        $.as_literal,
        $.is_initial,
        $.is_common)),
      '.'
    ),

    _program_id_paragraph_without_period: $ => seq(
      $._PROGRAM_ID, '.',
      $.program_name,
      optional(choice(
        $.as_literal,
        $.is_initial,
        $.is_common))
    ),

    _identification_metadata_section: $ => choice(
      $.author_section,
      $.installation_section,
      $.date_written_section,
      $.date_compiled_section,
      $.security_section
    ),

    program_name: $ => choice(
      $.cobol400_word,
      $._WORD,
      $._LITERAL
    ),

    environment_division: $ => seq(
      $._ENVIRONMENT,
      $._DIVISION,
      '.',
      optional($.configuration_section),
      optional($.input_output_section),
    ),

    input_output_section: $ => choice(
      seq(
        $._INPUT_OUTPUT, $._SECTION, '.',
        optional($._file_control_paragraph),
        optional($._i_o_control_paragraph)
      ),
      seq(
        $._INPUT_OUTPUT, $._SECTION, '.',
        repeat1($.select_statement),
        optional($._i_o_control_paragraph)
      ),
      $._file_control_paragraph,
      $._i_o_control_paragraph,
    ),

    _file_control_paragraph: $ => prec.right(seq(
      $._FILE_CONTROL, '.',
      repeat(choice($.misaligned_file_control_comment, $.select_statement))
    )),

    select_statement: $ => seq(
      $._SELECT,
      field('optional', optional($.OPTIONAL)),
      field('file_name', $._file_name),
      repeat($._select_clause),
      repeat(seq('.', repeat1($._select_clause))),
      repeat('.')
    ),

    _i_o_control_paragraph: $ => prec.right(seq(
      $._I_O_CONTROL, '.', optional($.i_o_control),
    )),

    _select_clause: $ => choice(
      $.assign_clause,
      $.access_mode_clause,
      $.alternative_record_key,
      $.collating_sequence_clause,
      $.control_area_clause,
      $.file_status_clause,
      $.lock_mode_clause,
      $.organization_clause,
      $.padding_character_clause,
      $.record_delimiter_clause,
      $.record_key_clause,
      $.relative_key_clause,
      $.reserve_clause,
      $.sharing_clause,
      $.error,
      $.nominal_key_clause,
    ),

    assign_clause: $ => seq(
      $._ASSIGN,
      optional($._TO),
      field('external_or_dynamic', optional($._ext_clause)),
      field('to', choice(
        $.DISK,
        $.PRINTER,
        seq(optional($._device), $._assignment_name),
      ))
    ),

    _ext_clause: $ => choice(
      $.EXTERNAL,
      $.DYNAMIC
    ),

    _device: $ => choice(
      $.DISK,
      $.PRINTER,
    ),

    _assignment_name: $ => choice(
      $._LITERAL,
      $.DISPLAY,
      $.database_assignment_name,
      seq(
        optional($._LITERAL), repeat1($.qualified_word)
      )
    ),

    _file_name: $ => choice($.cobol400_word, $.WORD),

    data_division: $ => prec.right(seq(
      $._DATA, $._DIVISION, '.',
      optional($.file_section),
      optional($.database_section),
      choice(
        seq(
          optional($.working_storage_section),
          optional($.local_storage_section),
          optional($.linkage_section),
          optional($.report_section),
          optional($.screen_section),
        ),
        seq(
          $.linkage_section,
          $.working_storage_section,
          optional($.local_storage_section),
          optional($.report_section),
          optional($.screen_section),
        )
      ),
    )),

	    file_section: $ => prec.right(choice(
	      seq(
	        $._FILE,
	        $._SECTION,
	        '.',
	        repeat(choice(
	          $.file_description,
	          $._file_section_copy_statement
	        ))
	      ),
	      seq(
	        $.file_type,
	        seq(
          $.file_description_entry,
          optional($.record_description_list),
          repeat($.file_description)
        )
	      )
	    )),

    _file_section_copy_statement: $ => seq(
      $.copy_statement,
      $._data_period
    ),

	    file_description: $ => prec.right(seq(
	      $.file_type,
      $.file_description_entry,
      optional($.record_description_list)
    )),

    file_type: $ => choice(
      $.FD,
      $.SD
    ),

    file_description_entry: $ => seq(
      choice($.cobol400_word, $.WORD),
      repeat($.file_description_clause),
      optional('.')
    ),

    file_description_clause: $ => choice(
      seq(optional($._IS), $.EXTERNAL),
      seq(optional($._IS), $.GLOBAL),
      $.block_contains_clause,
      $.record_clause,
      $.label_records_clause,
      $.value_of_clause,
      $.data_records_clause,
      $.linage_clause,
      $.recording_mode_clause,
      $.code_set_clause,
      $.report_clase,
      $.error,
    ),

    block_contains_clause: $ => prec.left(seq(
      $._BLOCK,
      optional($._CONTAINS),
      field('num', $.integer),
      field('to', optional(seq($._TO, $.integer))),
      optional(choice($._CHARACTERS, $._RECORDS))
    )),

    label_records_clause: $ => seq(
      $._LABEL,
      $._records,
      choice($.STANDARD, $.OMITTED)
    ),

    _records: $ => prec.left(choice(
      seq($._RECORD, optional(choice($._IS, $._ARE))),
      seq($._RECORDS, optional(choice($._IS, $._ARE))),
    )),

    data_records_clause: $ => seq(
      $._DATA,
      $._records,
      repeat1($.qualified_word),
    ),

    record_description_list: $ => prec.right(seq(
      repeat1($._data_division_entry)
    )),

    database_section: $ => prec.right(seq(
      $._DATA_BASE, $._SECTION, '.',
      repeat(choice(
        $.database_description,
        $._data_division_entry
      ))
    )),

    database_description: $ => seq(
      $._DB,
      field('name', $.qualified_word),
      repeat1($._data_period)
    ),

    working_storage_section: $ => prec.right(seq(
      $._WORKING_STORAGE, $._SECTION, '.',
      repeat($._data_division_entry)
    )),

    _data_division_entry: $ => prec.right(choice(
      seq($.copy_statement, repeat1($._data_period)),
      seq($.level_copy_statement, repeat1($._data_period)),
      prec(2, seq(alias($._condition_name_entry, $.data_description), repeat1($._data_period))),
      seq($.data_description, repeat1($.copy_statement), repeat1($._data_period)),
      seq($.data_description, repeat1($._data_period)),
      $.data_description_without_period,
      seq(alias($._exec_sql_include_statement, $.exec_sql_statement), optional(seq($._data_period, optional($._data_period)))),
      seq($.exec_sql_statement, optional($._data_period))
    )),

    data_description_without_period: $ => prec(-1, $.data_description),

    _data_period: $ => choice(
      '.',
      $._fixed_format_period
    ),

    data_description: $ => choice(
      $.constant_entry,
      seq(
        $.level_number, $.entry_name,
        repeat($._data_description_clause), optional($._LITERAL)
      ),
      seq(
        $.level_number,
        repeat1($._data_description_clause), optional($._LITERAL)
      ),
      /*seq(
        $.level_number_88, $.entry_name
      ),*/
    ),

    level_number: $ => /[0-9][0-9]?/,
    entry_name: $ => choice(
      $._FILLER,
      $.cobol400_word,
      $._WORD
    ),

    _data_description_clause: $ => choice(
      $.redefines_clause,
      $.external_clause,
      $.global_clause,
      $.picture_clause,
      $.usage_clause,
      $.sign_clause,
      $.occurs_clause,
      $.justified_clause,
      $.synchronized_clause,
      $.blank_clause,
      $.based_clause,
      $.value_clause,
      $.renames_clause,
      $.any_length_clause,
      $.burroughs_lower_bounds_clause,
      $.real_usage_clause,
      $.indicator_clause,
      $.error
    ),

    qualified_word: $ => sepBy(
      choice($.cobol400_word, $.WORD), $._in_of
    ),

    _in_of: $ => choice(
      $._IN,
      $._OF,
      $._ZERO_OF
    ),

    picture_clause: $ => seq(
      choice($._PICTURE, $._PIC),
      optional($._IS),
      $._picture_string,
      optional($.date_format_clause)
    ),

    date_format_clause: $ => $._date_format_clause,

    _picture_string: $ => choice(
      $.picture_x,
      $.picture_n,
      $.picture_9,
      $.picture_a,
      $.picture_edit,
    ),

    picture_x: $ => choice(
      $._fixed_format_picture_x,
      /([xX](\([0-9]+\))?)+/
    ),

    picture_9: $ => choice(
      $._fixed_format_picture_9,
      $._picture_9_z,
      $._picture_9_v_1,
      $._picture_9_v_2,
    ),
    _picture_9_z: $ => /[sS]?(9(\([0-9]+\))?)+([zZ](\([0-9]+\))?)+/,
    _picture_9_v_1: $ => /[sS]?([pP9](\([0-9]+\))?)+([vV]([pP9](\([0-9]+\))?)*)?/,
    _picture_9_v_2: $ => /[sS]?[vV]([pP9](\([0-9]+\))?)*/,

    picture_edit: $ => choice(
      $._fixed_format_picture_edit,
      /([aAxX9bBvVzZpPwW\(\)0-9$/,\.*+<>-]|[cC][rR]|[dD][bB])*([aAxX9bBvVzZpPwW\(\)0-9$/,*+<>-]|[cC][rR]|[dD][bB])/
    ),

    sql_type_clause: $ => seq(
      $._SQL,
      optional(seq($._TYPE, optional($._IS))),
      field('type', $.sql_type_name),
      optional(field('size', $.sql_type_size))
    ),

    sql_type_name: $ => choice(
      alias($._BLOB, $.blob_type),
      alias($._CLOB, $.clob_type),
      alias($._DBCLOB, $.dbclob_type)
    ),

    sql_type_size: $ => seq(
      '(',
      field('length', alias($._sql_type_length, $.integer)),
      ')'
    ),

    _sql_type_length: $ => token(prec(2, /[0-9]+[kKmMgG]?/)),

    usage_clause: $ => choice(
      seq(
        optional(seq($._USAGE, optional($._IS))),
        $._usage
      ),
      seq(
        $._USAGE,
        optional($._IS),
        $.sql_type_clause
      )
    ),

    _usage: $ => choice(
      $.BINARY,
      $.COMPUTATIONAL,
      $.COMP,
      $.COMP_1,
      $.COMP_2,
      $.COMP_3,
      $.COMP_4,
      $.COMP_5,
      $.COMP_X,
      $.DISPLAY,
      $.INDEX,
      $.PACKED_DECIMAL,
      $.POINTER,
      $.PROCEDURE_POINTER,
      $.PROGRAM_POINTER,
      $.SIGNED_SHORT,
      $.SIGNED_INT,
      $.SIGNED_LONG,
      $.UNSIGNED_SHORT,
      $.UNSIGNED_INT,
      $.UNSIGNED_LONG,
      seq($.BINARY_CHAR, $.SIGNED),
      seq($.BINARY_CHAR, $.UNSIGNED),
      $.BINARY_CHAR,
      seq($.BINARY_SHORT, $.SIGNED),
      seq($.BINARY_SHORT, $.UNSIGNED),
      $.BINARY_SHORT,
      seq($.BINARY_LONG, $.SIGNED),
      seq($.BINARY_LONG, $.UNSIGNED),
      $.BINARY_LONG,
      seq($.BINARY_DOUBLE, $.SIGNED),
      seq($.BINARY_DOUBLE, $.UNSIGNED),
      $.BINARY_DOUBLE,
      seq($.BINARY_C_LONG, $.SIGNED),
      seq($.BINARY_C_LONG, $.UNSIGNED),
      $.BINARY_C_LONG,
      $.NATIONAL
    ),

    burroughs_lower_bounds_clause: $ => seq(
      $._WITH,
      $._LOWER_BOUNDS
    ),

    real_usage_clause: $ => $._REAL,

    value_clause: $ => prec.right(seq(
      choice($._VALUE, $._VALUES),
      optional(choice($._IS, $._ARE)),
      repeat1($.value_item),
      optional($._WHEN),
      optional($._SET),
      optional($._TO),
      optional(seq(
        $._FALSE,
        optional($._IS),
        field('when_set_to_false', $._literal)))
    )),

    value_item: $ => seq(
      choice($._literal, alias($._fixed_format_integer_value, $.integer)),
      optional(seq(
        $.THRU,
        $._literal
      )),
      optional(',')
    ),

    linkage_section: $ => prec.right(seq(
      $._LINKAGE, $._SECTION, '.',
      repeat($._data_division_entry)
    )),

    procedure_division: $ => prec.right(3, seq(
      $._PROCEDURE, $._DIVISION,
      optional($.procedure_using_chaining),
      optional($.procedure_returning),
      '.',
      optional($.procedure_declaratives),
      optional($._procedure_division_contenet)
    )),

    procedure_using_chaining: $ => seq(
      choice($.USING, $.CHAINING),
      repeat($.procedure_param),
    ),

    procedure_param: $ => seq(
      optional($.procedure_type),
      optional($.size),
      optional($.OPTIONAL),
      $._WORD
    ),

    _procedure_division_contenet: $ => prec.right(3, choice(
      seq(
        optional($._procedure_division_headers),
        repeat(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat1($._procedure_division_statement)
      ),
      seq(
        optional($._procedure_division_headers),
        repeat1(seq(
          $._procedure_division_statements_before_header,
          $._procedure_division_headers,
        )),
        repeat($._procedure_division_statement)
      ),
    )),

    period: $ => '.',

    copy_statement: $ => prec.right(seq(
      $._COPY,
      field('book', choice($.copybook_bib_name, $.cobol400_word, $.WORD, $.string)),
      field('lib_name', optional(seq(
        optional($._in_of),
        choice($.cobol400_word, $.WORD, $.string)))
      ),
      field('supress', optional($.SUPPRESS)),
      optional($.replacing_clause)
    )),

    stop_statement: $ => choice(
      seq(
        $._STOP,
        $._RUN,
        optional(choice(
          field('returning', seq($._RETURNING, $._x)),
          field('giving', seq($._GIVING, $._x))
        ))
      ),
      seq(
        $._STOP,
        field('x', $._simple_value),
      )
    ),

    display_statement: $ => seq(
      $._DISPLAY,
      $._display_body,
    ),

    _display_body: $ => prec.right(choice(
      seq($._id_or_lit, $._UPON_ENVIRONMENT_NAME),
      seq($._id_or_lit, $._UPON_ENVIRONMENT_VALUE),
      seq($._id_or_lit, $._UPON_ARGUMENT_NUMBER),
      seq($._id_or_lit, $._UPON_COMMAND_LINE),
      repeat1($._display_positioned_group_variant),
      seq(repeat1($._x), optional($.at_line_column), optional($.with_clause)),
      seq(repeat1($._x), $.display_with_before_at_clause, optional($.at_line_column)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $.MNEMONIC_NAME, optional($.with_clause)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $._WORD, optional($.with_clause)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $.PRINTER, optional($.with_clause)),
      seq(repeat1($._x), optional($.at_line_column), $.UPON, $.CRT, optional($.with_clause)),
    )),

    if_header: $ => prec(1, seq(
      choice($._IF, $.legacy_fi_if_keyword),
      field('condition', choice($.legacy_not_literal_condition, $.unbalanced_boolean_condition, $.expr, $.unbalanced_parenthesized_condition)),
      optional($._THEN),
    )),

    expr: $ => prec.left(choice(
      seq($.NOT, $.expr),
      seq($.expr, choice($.AND, $.OR), $.expr),
      $._expr_bool,
      seq("(", $.expr, ")")
    )),

    _expr_bool: $ => choice(
      $._expr_is,
      $.is_not_user_class,
      $._expr_compare,
      $._expr_calc,
      $.is_class,
      $.is_not_class,
    ),

    eq: $ => seq(
      optional($._IS),
      choice($._EQUAL, '='),
      optional($._TO)
    ),

    _simple_value: $ => choice(
      $._identifier,
      $._basic_literal
    ),

    at_hex_literal: $ => /@[0-9A-Fa-f]+@/,

    dfhvalue_expression: $ => seq(
      $._DFHVALUE,
      '(',
      field('name', $.WORD),
      ')'
    ),

    _literal: $ => choice(
      $._basic_literal,
      seq($.ALL, $._basic_value)
    ),

    _ARE: $ => /[aA][rR][eE]/,
