grammars/tree-sitter-cobol/test/corpus/debug_indicator.txt
====================================
debug indicator display
====================================
       identification division.
       program-id. a.
       procedure division.
000100D    display 'debug'.
       stop run.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (display_statement
        (string))
      (period)
      (stop_statement)
      (period))))

====================================
lowercase debug indicator display
====================================
       identification division.
       program-id. a.
       procedure division.
000100d    display 'debug'.
       stop run.
---

(start
  (program_definition
    (identification_division
      (program_name))
    (procedure_division
      (display_statement
        (string))
      (period)
      (stop_statement)
      (period))))
